# limit-order-book

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.githooks/: commit-msg
.github/workflows/: ci.yml  pages.yml
benchmark/: CMakeLists.txt  bench_order_book.cpp
build-bench/: Makefile  cmake_install.cmake
build-bench/benchmark/: Makefile  cmake_install.cmake
build-bench/libs/backtest/: Makefile  backtest_benchmarks  cmake_install.cmake
build-bench/sim/: Makefile  cmake_install.cmake
docs/: BENCHMARKS.md  CMakeLists.txt  mainpage.md
include/lob/: book_snapshot.hpp  matching_engine.hpp  object_pool.hpp  order.hpp  order_book.hpp  order_result.hpp  price_ladder.hpp  price_level.hpp  trade.hpp  types.hpp  version.hpp
libs/backtest/: CMakeLists.txt
libs/backtest/benchmark/: bench_backtest.cpp
libs/backtest/data/: sample_ohlcv.csv
libs/backtest/examples/: backtest_example.cpp
libs/backtest/include/backtest/: engine.hpp  runner.hpp
libs/backtest/include/backtest/analytics/: metrics.hpp
libs/backtest/include/backtest/core/: bar.hpp  enums.hpp  trade_record.hpp
libs/backtest/include/backtest/data/: csv_data_handler.hpp  data_handler.hpp  vector_data_handler.hpp
libs/backtest/include/backtest/event/: event.hpp  event_queue.hpp
libs/backtest/include/backtest/execution/: execution_simulator.hpp  simulated_execution.hpp
libs/backtest/include/backtest/portfolio/: portfolio.hpp  position.hpp
libs/backtest/include/backtest/report/: json_export.hpp  reporter.hpp
libs/backtest/include/backtest/risk/: risk_manager.hpp
libs/backtest/include/backtest/strategy/: moving_average_cross.hpp  strategy.hpp
libs/backtest/include/backtest/util/: overloaded.hpp
libs/backtest/src/: csv_data_handler.cpp  json_export.cpp  metrics.cpp  moving_average_cross.cpp  portfolio.cpp  position.cpp  reporter.cpp  risk_manager.cpp  runner.cpp  simulated_execution.cpp
libs/backtest/tests/: test_backtest_engine.cpp  test_csv_data_handler.cpp  test_event_queue.cpp  test_metrics.cpp  test_moving_average_cross.cpp  test_portfolio.cpp  test_position.cpp  test_reporter.cpp  test_risk_manager.cpp  test_runner.cpp  test_simulated_execution.cpp
libs/backtest/tools/: backtest_sim.cpp
scripts/: build.bat  build.sh  clean.sh  run_sim.bat  run_sim.sh  test.sh
sim/: CMakeLists.txt  json_export.hpp  main.cpp  order_flow_simulator.hpp
src/: order_book.cpp  version.cpp
tests/: CMakeLists.txt  test_market_and_modify.cpp  test_matching_engine.cpp  test_object_pool.cpp  test_order.cpp  test_order_book.cpp  test_price_level.cpp  test_snapshot.cpp  test_types.cpp  test_version.cpp
web/: README.md  backtest.html  backtest.json  index.html  simulation.json
